--- a/webextensions/sidebar/styles/square/border.css
+++ b/webextensions/sidebar/styles/square/border.css
@@ -10,6 +10,15 @@
   padding: 0em;
 }
 
+#tabbar {
+  border-top: 1px solid var(--tab-border);
+}
+
+#tabbar .tab.pinned + .tab:not(.pinned),
+#tabbar .tab:not(.pinned):first-of-type {
+  border-top: none;
+}
+
 
 :root.left .tab:not(.pinned) {
   padding-right: 0.65em;
