Hide needless border

--- a/webextensions/sidebar/styles/square/border.css
+++ b/webextensions/sidebar/styles/square/border.css
@@ -19,6 +19,9 @@
   border-top: none;
 }
 
+#tabbar + .after-tabs button {
+  border-bottom: none;
+}
 
 :root.left .tab:not(.pinned) {
   padding-right: 0.65em;
