Don't show initializing throbber after iinitializing state is gone

--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -59,6 +59,7 @@
   position: absolute;
 }
 
+:root:not(.initializing) #blocking-screen .throbber,
 .tab:not(.loading) .throbber {
   display: none !important;
 }
