Use more meaningful name

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -116,7 +116,7 @@ ul {
   visibility: hidden;
 }
 
-#dummy-favicon {
+#dummy-favicon-size-box {
   display: inline-block;
   width: 1em;
   height: 1em;
