Show blocking screen with throbber while tabs are duplicating

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -331,11 +331,10 @@ ul {
   z-index: 10000;
 }
 
-:root.initializing #blocking-screen {
+:root.blocking-throbber #blocking-screen {
   background: rgba(0, 0, 0, 0.35);
 }
 
-:root.initializing #blocking-screen,
 :root.blocking #blocking-screen {
   display: block;
 }
