--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -59,24 +59,24 @@
   position: absolute;
 }
 
-:root:not(.initializing) #blocking-screen .throbber,
+:root:not(.blocking-throbber) #blocking-screen .throbber,
 .tab:not(.loading) .throbber {
   display: none !important;
 }
 
 .tab.loading:not(.collapsed) .throbber::before,
-:root.initializing #blocking-screen .throbber::before {
+:root.blocking-throbber #blocking-screen .throbber::before {
   animation: throbber 1.1s ease-in-out infinite;
 }
 
-:root.initializing #blocking-screen .throbber {
+:root.blocking-throbber #blocking-screen .throbber {
   position: absolute;
   top: calc(50% - var(--favicon-size));
   left: calc(50% - var(--favicon-size));
   transform: scale(2, 2);
 }
 
-:root.initializing #blocking-screen .throbber::before {
+:root.blocking-throbber #blocking-screen .throbber::before {
   border-color: white;
   background-color: white;
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.35);
