--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -4,6 +4,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */
 
+p.sub {
+  margin-left: 2em;
+}
+
 #style-radiogroup {
   align-content: flex-start;
   align-items: center;
