--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -4,6 +4,11 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */
 
+p, ul {
+  margin: 0 0 0.5em 0;
+  padding: 0;
+}
+
 ul,
 ul li {
   list-style: none;
