Add style rules for tab selection

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -258,6 +258,7 @@ ul {
 
 .closebox {
   opacity: var(--button-opacity);
+  position: relative;
 }
 
 .closebox::before {
@@ -316,6 +317,24 @@ ul {
   display: block;
 }
 
+
+/* selection */
+
+.tab.selected .favicon::::after,
+.tab.ready-to-close .favicon::::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: Highlight;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+/* blocking UI */
 
 #blocking-screen {
   bottom: 0;
