Fix inverted appearance of dropdown menu

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -98,7 +98,8 @@ button {
 :root.left #tabbar {
   direction: rtl;
 }
-:root.left #all-tabs {
+:root.left #all-tabs,
+:root.left #tabbar .after-tabs {
   direction: ltr;
 }
 
