Make safe for environments which contextual identity is not available or no-color contextual identity

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -348,7 +348,7 @@ ul {
   text-align: center;
 }
 
-.newtab-button-box:hover .contextual-identities-selector {
+.newtab-button-box:hover .contextual-identities-selector:not([disabled="true"]) {
   pointer-events: auto;
   opacity: 1;
 }
