--- a/webextensions/sidebar/styles/twisty.css
+++ b/webextensions/sidebar/styles/twisty.css
@@ -1,3 +1,10 @@
+@charset "UTF-8";
+/*
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+*/
+
 .tab .twisty {
   display: inline-block;
   font-size: 0.65em;
