Apply submenu delay.
300ms is same to Firefox's default.
https://dxr.mozilla.org/mozilla-central/source/layout/xul/nsMenuFrame.cpp#528

--- a/webextensions/sidebar/context-menu.css
+++ b/webextensions/sidebar/context-menu.css
@@ -30,6 +30,10 @@
   z-index: 999999;
 }
 
+#tabContextMenu ul {
+  transition-delay: 300ms;
+}
+
 #tabContextMenu.open,
 #tabContextMenu li:hover ul {
   opacity: 1;
