Don't show extra menu for non-tab context menu

--- a/webextensions/sidebar/context-menu.css
+++ b/webextensions/sidebar/context-menu.css
@@ -82,6 +82,7 @@
 #tabContextMenu[data-tab-states~="pinned"] #context-bookmarkAll,
 #tabContextMenu[data-tab-states~="pinned"] #context-closeOther,
 #tabContextMenu:not([data-tab-id]) .require-context-tab,
+#tabContextMenu:not([data-tab-id]) .extra,
 #tabContextMenu:not(.has-multiple-tabs) .require-multiple-tabs,
 #tabContextMenu:not(.has-normal-tabs) .require-normal-tabs,
 #tabContextMenu:not(.has-multiple-normal-tabs) .require-multiple-normal-tabs {
