Add margin around menu

--- a/webextensions/sidebar/context-menu.css
+++ b/webextensions/sidebar/context-menu.css
@@ -19,8 +19,8 @@
   box-shadow: 0.25em 0.25em 0.5em rgba(0, 0, 0, 0.35);
   color: MenuText;
   margin: 0;
-  max-height: 100%;
-  max-width: 100%;
+  max-height: calc(100% - 6px);
+  max-width: calc(100% - 6px);
   opacity: 0;
   overflow: auto;
   padding: 0.5em 0;
