--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -180,6 +180,7 @@ ul {
   margin-top: calc(0px - var(--tab-height));
   opacity: 0;
   pointer-events: none;
+  z-index: -100;
 }
 
 .tab.collapsed-completely {
