Don't expand sub-sub menu

--- a/webextensions/common/fake-context-menu/sidebar.css
+++ b/webextensions/common/fake-context-menu/sidebar.css
@@ -35,7 +35,7 @@
 }
 
 #tabContextMenu.open,
-#tabContextMenu li:hover ul {
+#tabContextMenu li:hover > ul {
   opacity: 1;
   pointer-events: auto;
 }
