--- a/webextensions/common/fake-context-menu/sidebar.css
+++ b/webextensions/common/fake-context-menu/sidebar.css
@@ -23,7 +23,7 @@
   max-width: calc(100% - 6px);
   opacity: 0;
   overflow: auto;
-  padding: 0.5em 0;
+  padding: 0;
   pointer-events: none;
   position: fixed;
   transition: opacity var(--collapse-animation);
@@ -43,7 +43,7 @@
 #tabContextMenu li {
   list-style: none;
   margin: 0;
-  padding: 0.2em 0.5em 0.2em 1.5em;
+  padding: 0.15em 0.5em 0.15em 1.5em;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
