Show active tab marker consistently

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -237,8 +237,7 @@ ul {
 .tab.pinned :-moz-any(
   .twisty,
   .label,
-  .closebox,
-  .extra-items-container.behind
+  .closebox
 ) {
   display: none;
 }
