--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -42,7 +42,7 @@
   background: transparent url("/resources/loading.svg") left center no-repeat;
   width: calc(var(--throbber-size) * 60);
   height: 100%;
-  -moz-context-properties: fill;
+  -moz-context-properties: fill, stroke;
   fill: currentColor;
   opacity: 0.7;
 }
@@ -70,7 +70,7 @@
 
 :root.blocking-throbber #blocking-screen .throbber::before {
   color: white;
-  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.35);
+  stroke: rgba(0, 0, 0, 0.35);
 }
 
 #dummy-tabs .throbber {
