--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -11,7 +11,13 @@
   display: none;
   margin: 0;
   opacity: 0.75;
-  padding: 0.1em;
+  -moz-context-properties: fill, stroke;
+  fill: currentColor;
+  --sound-button-size: 16px;
+  width: var(--sound-button-size);
+  height: var(--sound-button-size);
+  min-width: var(--sound-button-size);
+  min-height: var(--sound-button-size);
 }
 
 .sound-button:hover {
@@ -31,26 +37,40 @@
   display: inline-block;
 }
 
-.tab.muted .sound-button::before,
+.tab.muted .sound-button,
 .tab.has-muted-member.subtree-collapsed[data-child-ids]
-  .sound-button::before {
-  content: "🔇";
+  .sound-button {
+  background-image: url("/resources/audio-16-mute.svg");
 }
 
 /* put style definition for sound-playing tab after muted tab,
    because "sound-playing" is more important than muted for
    mixed state tree. */
-.tab.sound-playing:not(.muted) .sound-button::before,
+.tab.sound-playing:not(.muted) .sound-button,
 .tab.has-sound-playing-member.subtree-collapsed[data-child-ids]
-  .sound-button::before {
-  content: "🔈";
+  .sound-button {
+  background-image: url("/resources/audio-16.svg");
 }
 
 .tab.pinned .sound-button {
+  border-radius: 50%;
   font-size: 90%;
   padding: 0;
   position: absolute;
   right: 0;
   top: 0;
   z-index: 200;
+  stroke: -moz-field;
+  opacity: 1;
+}
+
+.tab.pinned .sound-button:hover,
+.tab.pinned .sound-button:active {
+  opacity: 1;
+  background-color: -moz-field;
+  fill: -moz-fieldtext;
+}
+
+.tab.pinned .sound-button:active {
+  opacity: var(--button-active-opacity);
 }
