--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -16,14 +16,11 @@
 }
 
 @keyframes throbber {
-  0% { left: 0; width: 0; }
-  3% { left: 0; width: 0; }
-  20% { width: var(--throbber-half-size); }
-  47% { left: calc(var(--favicon-size) - var(--throbber-size)); width: 0; }
-  53% { left: calc(var(--favicon-size) - var(--throbber-size)); width: 0; }
-  70% { width: var(--throbber-half-size); }
-  97% { left: 0; width: 0; }
-  100% { left: 0; width: 0; }
+  0%    { transform: translateX(0) scale(1, 1); }
+  17.5% { transform: translateX(calc((var(--favicon-size) - var(--throbber-size)) * 0.625)) scale(1.6, 0.9); }
+  50%   { transform: translateX(calc(var(--favicon-size) - var(--throbber-size))) scale(1,1); }
+  67.5% { transform: translateX(calc((var(--favicon-size) - var(--throbber-size)) * 0.625)) scale(1.6, 0.9); }
+  100%  { transform: translateX(0) scale(1, 1); }
 }
 
 .throbber {
@@ -56,6 +53,7 @@
   background: var(--throbber-color);
   display: inline-block;
   top: calc((var(--favicon-size) - var(--throbber-size)) / 2);
+  left: 0;
   position: absolute;
 }
 
@@ -66,7 +64,7 @@
 
 .tab.loading:not(.collapsed) .throbber::before,
 :root.blocking-throbber #blocking-screen .throbber::before {
-  animation: throbber 1.1s ease-in-out infinite;
+  animation: throbber 1.05s ease infinite;
 }
 
 :root.blocking-throbber #blocking-screen .throbber {
