--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -46,7 +46,7 @@
   content: "🔈";
 }
 
-.tab.pinned .sound-button {
+.tab.faviconized .sound-button {
   font-size: 90%;
   padding: 0;
   position: absolute;
