--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -199,7 +199,7 @@
   border-image-outset: 6px 0 0 0;
 }
 
-.tab:not(.pinned)[data-drop-position="before"]::before {
+.tab:not(.faviconized)[data-drop-position="before"]::before {
   top: 6px;
 }
 
