--- a/webextensions/sidebar/styles/square/plain-color-dark.css
+++ b/webextensions/sidebar/styles/square/plain-color-dark.css
@@ -29,19 +29,19 @@
   top: 0;
 }
 
-:root.left .tab.active:not(.pinned) .extra-items-container.behind::before {
+:root.left .tab.active:not(.faviconized) .extra-items-container.behind::before {
   bottom: 0;
   left: 0;
   width: var(--tab-active-marker-size);
 }
 
-:root.right .tab.active:not(.pinned) .extra-items-container.behind::before {
+:root.right .tab.active:not(.faviconized) .extra-items-container.behind::before {
   bottom: 0;
   right: 0;
   width: var(--tab-active-marker-size);
 }
 
-.tab.active.pinned .extra-items-container.behind::before {
+.tab.active.faviconized .extra-items-container.behind::before {
   height: var(--tab-active-marker-size);
   left: 0;
   right: 0;
