--- a/webextensions/common/fake-context-menu/sidebar.css
+++ b/webextensions/common/fake-context-menu/sidebar.css
@@ -18,6 +18,7 @@
   border: 1px outset Menu;
   box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.65);
   color: MenuText;
+  font: -moz-pull-down-menu;
   margin: 0;
   max-height: calc(100% - 6px);
   max-width: calc(100% - 6px);
