Invert color of throbber for highlighted tabs #1406

--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -35,6 +35,10 @@
   color: HighlightText;
 }
 
+.tab.active .throbber::before {
+  background-color: HighlightText;
+  border-color: HighlightText;
+}
 
 .closebox {
   background: none transparent;
