Implement basic tab burst animation #1415

--- a/webextensions/sidebar/styles/square/plain-color-dark.css
+++ b/webextensions/sidebar/styles/square/plain-color-dark.css
@@ -15,6 +15,10 @@
   --tabbar-bg: black;
 }
 
+.tab:not(.active) {
+  --throbber-color: white;
+}
+
 .tab.active {
   background: var(--tab-surface-active);
 }
