--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -49,12 +49,17 @@
   --badge-bg-color-inactive: #929292;
   --dropmarker-border-color: #577bf3;
   --dropmarker-bg-color: #d0def5;
-  --throbber-color: var(--dropmarker-border-color);
-  --throbber-shadow-color: white;
+  --throbber-color: white;
+  --throbber-shadow-color: var(--dropmarker-border-color);
 
   --tab-highlighted-highlight: white;
   --tab-highlighted-glow: var(--dropmarker-border-color);
   --tab-highlighted-base: var(--bg-color);
+}
+
+.tab:not(.active) {
+  --throbber-color: var(--dropmarker-border-color);
+  --throbber-shadow-color: white;
 }
 
 /* Background colour for the tree sidebar (light blue when window is
