Apply "light" burster color for tabs not activated since load #1415

--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -121,3 +121,7 @@
   opacity: 0;
   transform-origin: 50% 50%;
 }
+
+:root.animation .tab.not-activated-since-load.bursting .burster::before {
+  animation-name: tab-burst-animation-light;
+}
